Update Stats and Public Health Part 2.ipynb

--- a/Stats and Public Health Part 2.ipynb
+++ b/Stats and Public Health Part 2.ipynb
@@ -5,7 +5,7 @@
    "id": "375f4391",
    "metadata": {},
    "source": [
-    "## Stats and Public Health - Part 2"
+    "## Statistics & Public Health 2"
    ]
   },
   {
